# gutenberg_pipeline

./: .env_example  .gitignore  README.md  pyproject.toml
src/gutenberg_pipeline/: __init__.py  config.py  database.py  db_service.py  extract.py  main.py  models.py  repositories.py  transfer.py
src/gutenberg_pipeline/extract/: content_cleaner.py  downloader.py  rdf_parser.py
tests/: test_book_service.py
